# synesthetic-schemas

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  build.sh  flake.nix  notes.txt  package-lock.json  package.json  poetry.toml  preflight.sh  pyproject.toml  pyrightconfig.json  test.sh  version.json
.cache/: last_preflight.txt
.github/: CODEOWNERS
codegen/: gen_py.sh  gen_ts.sh  ts_bundle.mjs
docs/: README.md  governance.md  hypotheses.md  index.html  schema_evolution.md  state-flow.md
examples/: Control-Bundle_Example.json  Control_Example.json  Haptic_Example.json  README.md  Rule-Bundle_Example.json  RuleBundle_Example.json  Shader_Example.json  SynestheticAsset_Example1.json  SynestheticAsset_Example2.json  SynestheticAsset_Example3.json  SynestheticAsset_Example4.json  SynestheticAsset_Example5.json  SynestheticAsset_Example6.json  SynestheticAsset_Example7.json  SynestheticAsset_Example8.json  SynestheticAsset_Example9.json  SynestheticAsset_ExampleDS.json  Tone_Example.json
jsonschema/: control-bundle.schema.json  control.schema.json  haptic.schema.json  modulation.schema.json  rule-bundle.schema.json  rule.schema.json  shader.schema.json  synesthetic-asset.schema.json  tone.schema.json
meta/: SSOT_AUDIT.md  spec.schema.flow.md  state-flow.md
python/: pyproject.toml
python/src/synesthetic_schemas/: asset.py  control.py  control_bundle.py  control_bundle_schema.py  control_schema.py  haptic.py  haptic_schema.py  modulation.py  modulation_schema.py  rule.py  rule_bundle.py  rule_bundle_schema.py  rule_schema.py  shader.py  shader_schema.py  synesthetic_asset.py  synesthetic_asset_schema.py  tone.py  tone_schema.py
scripts/: audit_crossrepo.py  audit_docs.py  bump_version.py  check_codegen_clean.sh  cleanup_examples.py  convert_legacy_rule_bundles.py  create_issues.sh  diff_codegen.sh  ensure_codegen_clean.sh  examples_qc.py  normalize_schemas.py  patch_asset_refs.py  schema_lint.py  ssot_audit.py  strip_db_ids.py  (+3 more)
(+142 files in other folders)
